--- a/Portfolio-C/src/styles.css
+++ b/Portfolio-C/src/styles.css
@@ -9,14 +9,14 @@ section {
 }
 
 .hero {
-    background-color: rgb(40, 122, 245);
+    background-color: #000000;
     height: 100vh;
     color: white;
     font-size: 50px;
 }
 
 footer {
-    background-color: rgb(40, 122, 245);
+    background-color: #0e1a40;
     color: white;
     text-align: center;
 }
@@ -25,7 +25,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    background-color: rgb(254, 217, 223);
+    background-color: #946b2d;
 }
 
 ul {
@@ -81,7 +81,7 @@ p {
     width: 200px;
     height: 50px;
     border-radius: 100px;
-    background-color: rgb(254, 217, 223);
+    background-color: #5d5d5d;
     text-align: center;
     font-size: 30px;
     font-weight: 300;
@@ -91,7 +91,7 @@ p {
 }
 
 .button:hover {
-    background-color: rgb(255, 192, 203);
+    background-color: #946b2d;
 }
 
 .button:active {
@@ -205,7 +205,7 @@ a {
 
     ul {
         display: none;
-        background-color: rgb(254, 217, 223);
+        background-color: #000000;
         margin: 0px;
         font-size: small;
     }
@@ -217,7 +217,7 @@ a {
 
     nav {
         align-items: flex-start;
-        background-color: rgb(254, 217, 223);
+        background-color: #000000;
     }
 
     .logo {
