--- a/Portfolio-C/src/styles.css
+++ b/Portfolio-C/src/styles.css
@@ -19,6 +19,7 @@ footer {
     background-color: #0e1a40;
     color: white;
     text-align: center;
+    padding-bottom: 25px;
 }
 
 nav {
@@ -217,7 +218,7 @@ a {
 
     nav {
         align-items: flex-start;
-        background-color: #000000;
+        background-color: #946b2d;
     }
 
     .logo {
